--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "nuwave/lighthouse": "^6.64"
+        "nuwave/lighthouse": "^6.64",
+        "laravel/sanctum": "^4.3"
     }
 }
